보고서 입력시 시간입력란을 select form 으로 변경

--- a/photos/templates/edit.html
+++ b/photos/templates/edit.html
@@ -97,10 +97,11 @@
         <div id="my-text-box"></div>
         <hr>
         <h5>스터디 시작 시간 입력</h5>
-        {{ form.study_start_time }}
+        {{ form.study_start_time }} 시 
+        {{ form.study_start_time_minute }} 분
         <hr>
         <h5>스터디 시간 입력(분 단위)</h5>
-        {{ form.study_total_duration }}
+        {{ form.study_total_duration }} 분
         <hr>
         <h5>스터디 내용</h5>
         {{ form.title }}
