--- a/photos/templates/register_form.html
+++ b/photos/templates/register_form.html
@@ -166,7 +166,7 @@
 
             <label for="question">함께 스터디 그룹하기로 이야기 된 학우 정보 있다면 기입. 해당 학우들도 반드시 신청을 따로 해야 함. (이름과 스마트폰 마지막 4자리.) <br>예:
                 홍길동(1234), 김길동(2345) 우선순위 과목도 일치해야 함.</label><br>
-            <input type="text" name="want_member" style="width:400px;" required>
+            <input type="text" name="want_member" style="width:400px;">
             <br><br>
 
 
@@ -191,7 +191,7 @@
             <br>
 
             <label for="question">1순위 매칭 과목코드 (예: ITP20005)<should> *</should></label><br>
-            <input type="text" name="class1_code" pattern="[0-9][a-z]{8}" maxlength="8" style="width:200px;" required>
+            <input type="text" name="class1_code" maxlength="8" style="width:200px;" required>
             <br><br>
 
             <label for="question">1순위 매칭 과목명 (예: Programming Language Theory)<should> *</should></label><br>
@@ -203,7 +203,7 @@
             <br><br>
 
             <label for="question">2순위 매칭 과목코드 (예: ITP20005)</label><br>
-            <input type="text" name="class2_code" pattern="[0-9][a-z]{8}" maxlength="8" style="width:200px; ">
+            <input type="text" name="class2_code" maxlength="8" style="width:200px;" >
             <br><br>
 
             <label for="question">2순위 매칭 과목명 (예: Programming Language Theory)</label><br>
@@ -215,7 +215,7 @@
             <br><br>
 
             <label for="question">3순위 매칭 과목코드 (예: ITP20005)</label><br>
-            <input type="text" name="class3_code" pattern="[0-9][a-z]{8}" maxlength="8" style="width:200px; ">
+            <input type="text" name="class2_code" maxlength="8" style="width:200px;" >
             <br><br>
 
             <label for="question">3순위 매칭 과목명 (예: Programming Language Theory)</label><br>
