--- a/photos/templates/register_form.html
+++ b/photos/templates/register_form.html
@@ -215,7 +215,7 @@
             <br><br>
 
             <label for="question">3순위 매칭 과목코드 (예: ITP20005)</label><br>
-            <input type="text" name="class2_code" maxlength="8" style="width:200px;" >
+            <input type="text" name="class3_code" maxlength="8" style="width:200px;" >
             <br><br>
 
             <label for="question">3순위 매칭 과목명 (예: Programming Language Theory)</label><br>
@@ -227,7 +227,7 @@
             <br><br>
 
             <label for="question">기타 요청사항</label><br>
-            <input type="text" name=demand style="width:400px;" required>
+            <input type="text" name=demand style="width:400px;">
             <br><br>
 
             <hr>
