--- a/photos/templates/register_form.html
+++ b/photos/templates/register_form.html
@@ -239,7 +239,7 @@
                 <label class="lba" for="yes">예</label>
             </div>
             <div>
-                <input type="radio" id="no" name="english_ok" value="no">
+                <input type="radio" id="no" name="english_ok" value="no" checked>
                 <label class="lba" for="woman">아니오</label>
             </div>
             <br>
@@ -250,7 +250,7 @@
                 <label class="lba" for="yes">예</label>
             </div>
             <div>
-                <input type="radio" id="no" name="club_study" value="no">
+                <input type="radio" id="no" name="club_study" value="no" checked>
                 <label class="lba" for="woman">아니오</label>
             </div>
             <br>
@@ -261,7 +261,7 @@
                 <label class="lba" for="yes">예</label>
             </div>
             <div>
-                <input type="radio" id="no" name="do_club" value="no">
+                <input type="radio" id="no" name="do_club" value="no" checked>
                 <label class="lba" for="woman">아니오</label>
             </div>
             <br>
@@ -272,7 +272,7 @@
 
             <label for="question">개인정보제공에 동의합니까? (동의하지 않으면 스터디 신청이 안 됨)<should> *</should></label><br>
             <div>
-                <input type="radio" id="yes" name="info_agree" value="yes" required>
+                <input type="radio" id="yes" name="info_agree" value="yes" checked required>
                 <label class="lba" for="yes">예</label>
             </div>
             <div>
