--- a/photos/templates/register_form.html
+++ b/photos/templates/register_form.html
@@ -158,7 +158,7 @@
             </div>
 
             <div>
-                <input type="radio" id="both" name="study_type" value="both">
+                <input type="radio" id="both" name="study_type" value="both" checked>
                 <label class="lba" for="both">비대면/대면 상관없음</label>
             </div>
 
@@ -239,7 +239,7 @@
                 <label class="lba" for="yes">예</label>
             </div>
             <div>
-                <input type="radio" id="no" name="english_ok" value="no" checked>
+                <input type="radio" id="no" name="english_ok" value="no" checked> <!-- have to fix MultiValueDictKeyError -->
                 <label class="lba" for="woman">아니오</label>
             </div>
             <br>
